--- a/app/src/main/res/layout/yorum_item.xml
+++ b/app/src/main/res/layout/yorum_item.xml
@@ -5,15 +5,9 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_launcher_foreground" />
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/yorum_içeriği"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Item Name"
@@ -23,17 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
-            android:id="@+id/beğen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"/>
-        <Button
-            android:id="@+id/yorumlar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Yorumlar"
-            android:layout_marginRight="5dp"/>
+
         <Button
             android:id="@+id/yorumu_sil"
             android:layout_width="wrap_content"
