--- a/app/src/main/res/layout/list_item_dashboard.xml
+++ b/app/src/main/res/layout/list_item_dashboard.xml
@@ -25,23 +25,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="5dp">
+        android:paddingTop="15dp">
 
         <Button
             android:id="@+id/yorumlar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:text="Yorumlar" />
+            android:text="Yorumlar"
+            android:background="@drawable/button_background"/>
         <Button
             android:id="@+id/beğen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginRight="5dp"
+            android:background="@drawable/button_background"/>
         <ImageView
             android:id="@+id/kaldır"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="47dp"
+            android:layout_height="47dp"
             android:background="@drawable/remove"/>
     </LinearLayout>
 </LinearLayout>
