--- a/app/src/main/res/layout/yorum_item.xml
+++ b/app/src/main/res/layout/yorum_item.xml
@@ -2,26 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
 
 
     <TextView
         android:id="@+id/yorum_içeriği"
-        android:layout_width="wrap_content"
+        android:layout_width="296dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:text="Item Name"
-        android:textSize="16sp" />
+        android:textColor="@color/black"
+        android:textSize="20sp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    </TextView>
 
-        <Button
-            android:id="@+id/yorumu_sil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Yorumu sil" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/yorumu_sil"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/remove" />
+
+
 </LinearLayout>
