--- a/app/src/main/res/layout/yorumlar.xml
+++ b/app/src/main/res/layout/yorumlar.xml
@@ -3,21 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/simple_background">
 
     <ListView
         android:id="@+id/list_yorumlar"
-        android:layout_width="match_parent"
-        android:layout_height="584dp"
+        android:layout_width="360dp"
+        android:layout_height="695dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:divider="@color/black"
+        android:dividerHeight="2dp"/>
 
     <TextView
         android:id="@+id/yorum_yok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Henüz yorum yok"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +34,10 @@
         android:id="@+id/yorum_ekle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="704dp"
+        android:background="@drawable/button_background"
         android:text="Yorum ekle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
