--- a/app/src/main/res/layout/bildirim_item.xml
+++ b/app/src/main/res/layout/bildirim_item.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/bildirim_görsel"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="start" />
+
     <TextView
         android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="Title"
         android:textColor="@color/black"
+        android:layout_gravity="center"
         android:textSize="16sp" />
-
 </LinearLayout>
