--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -46,6 +46,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/ismi_değiştir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_background"
+        android:text="İsim değiştir"
+        app:layout_constraintStart_toEndOf="@+id/çıkış_yap"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/hesabı_sil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
