--- a/app/src/main/res/layout/yorum_item.xml
+++ b/app/src/main/res/layout/yorum_item.xml
@@ -5,23 +5,57 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-
-    <TextView
-        android:id="@+id/yorum_içeriği"
-        android:layout_width="296dp"
+    <LinearLayout
+        android:layout_width="305dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Item Name"
-        android:textColor="@color/black"
-        android:textSize="20sp">
+        android:layout_marginRight="5dp"
+        android:orientation="vertical">
 
-    </TextView>
+        <TextView
+            android:id="@+id/yorum_içeriği"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Item Name"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_marginBottom="5dp">
+        </TextView>
 
-    <ImageView
-        android:id="@+id/yorumu_sil"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/remove" />
+        <TextView
+            android:id="@+id/yorum_tarihi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Item Date"
+            android:textColor="@color/black"
+            android:textSize="15sp">
+        </TextView>
+
+    </LinearLayout>
+
+
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/yorumu_sil"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/remove"
+            android:layout_marginBottom="5dp"/>
+
+        <ImageView
+            android:id="@+id/yorumu_düzenle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/kalem" />
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
